Mission part 2 finished

--- a/mission/index.html
+++ b/mission/index.html
@@ -7,8 +7,13 @@
     <meta author="Mark Whitman">
     <title>Mission Statement</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="mission.js" defer></script>
 </head>
 <body>
+    <select title="select" id="select">
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
+    </select>
     <div>
         <header>MISSION STATEMENT</header>
         <header class="subheader">BRIGHAM YOUNG UNIVERSITY-IDAHO</header>
