--- a/CoolPics/index.html
+++ b/CoolPics/index.html
@@ -25,34 +25,35 @@
     <main>
 
         <h2>Current Work</h2>
-        <section class="gallery"></section>
-        <figure>
+        <section class="gallery">
+        <figure class="row1" class="column 1">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
-        <figure>
+        <figure class="row1" class="column 2">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
-        <figure>
+        <figure class="row1" class="column 3">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
-        <figure>
+        <figure class="row2" class="column 1">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
-        <figure>
+        <figure class="row2" class="column 2">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
-        <figure>
+        <figure class="row2" class="column 3">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
-        <figure>
+        <figure class="row3" class="column 1">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
-        <figure>
+        <figure class="row3" class="column 2">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
-        <figure>
+        <figure class="row3" class="column 3">
             <img src="norris-sm.jpeg" alt="picture">
         </figure>
+    </section>
     </main>
     <footer>©2023 Not a real site 😀</footer>
 </body>
