--- a/CoolPics/index.html
+++ b/CoolPics/index.html
@@ -11,16 +11,19 @@
 
 </head>
 <body>
+    
     <header>
         <h1>Cool Pics 📷</h1>
-        <button>Menu</button>
-        <nav>
-            <a href="">Home</a>
-            <a href="">People</a>
-            <a href="">Places</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
-        </nav>
+        <div class="menu">
+            <button class="menu-button">Menu</button>
+            <nav class="hide">
+                <a href="">Home</a>
+                <a href="">People</a>
+                <a href="">Places</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+            </nav>
+        </div>
     </header>
     <main>
 
