--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="CoolPics/index.html">CoolPics</a>
     <a href="mission/index.html">Mission</a>
     <a href="Blog/index.html">Blog</a>
+    <a href="creditcard/index.html"></a>
 </body>
 </html>
