--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="mission/index.html">Mission</a>
     <a href="Blog/index.html">Blog</a>
     <a href="creditcard/index.html"></a>
+    <a href="Personal Site/site-plan.html">site plan</a>
 </body>
 </html>
