personal site added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="mission/index.html">Mission</a>
     <a href="Blog/index.html">Blog</a>
     <a href="creditcard/index.html"></a>
-    <a href="Personal Site/site-plan.html">site plan</a>
+    <a href="Quick_Garden_Tips/site-plan.html">site plan</a>
+    <a href="Quick_Garden_Tips/home.html"></a>
 </body>
 </html>
